0.1.2)
    - Added tests        (axiak) [FEATURE]