@@ -1,7 +1,7 @@
 from jinja2 import Environment, environmentfunction, nodes
 from jinja2.ext import Extension
 
-__all__ = ('TagRegistrar',)
+__all__ = ('TagRegistrar', 'JinjaTag',)
 
 class _SimpleTagExt(Extension):
     def parse(self, parser):
