@@ -1,2 +1,3 @@
 0.1.2)
-    - Added tests        (axiak) [FEATURE]
+    2011-12-22: - Added tests        (axiak) [FEATURE]
+    2011-12-22: - Added multiblock tag (axiak) [FEATURE]
